_generated-doc/3.8/config/quarkus-class-loading-configuration-class-loading-config.adoc

:summaryTableId: quarkus-class-loading-configuration-class-loading-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-class-loading-configuration-class-loading-config_configuration]]link:#quarkus-class-loading-configuration-class-loading-config_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-class-loading-configuration-class-loading-config_quarkus-class-loading-parent-first-artifacts]]`link:#quarkus-class-loading-configuration-class-loading-config_quarkus-class-loading-parent-first-artifacts[quarkus.class-loading.parent-first-artifacts]`


[.description]
--
Artifacts that are loaded in a parent first manner. This can be used to work around issues where a given class needs to be loaded by the system ClassLoader. Note that if you make a library parent first all its dependencies should generally also be parent first.

Artifacts should be configured as a comma separated list of artifact ids, with the group, artifact-id and optional classifier separated by a colon.

WARNING: This config property can only be set in application.properties

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_CLASS_LOADING_PARENT_FIRST_ARTIFACTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_CLASS_LOADING_PARENT_FIRST_ARTIFACTS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-class-loading-configuration-class-loading-config_quarkus-class-loading-reloadable-artifacts]]`link:#quarkus-class-loading-configuration-class-loading-config_quarkus-class-loading-reloadable-artifacts[quarkus.class-loading.reloadable-artifacts]`


[.description]
--
Artifacts that are loaded in the runtime ClassLoader in dev mode, so they will be dropped and recreated on change.

This is an advanced option, it should only be used if you have a problem with libraries holding stale state between reloads. Note that if you use this any library that depends on the listed libraries will also need to be reloadable.

This setting has no impact on production builds.

Artifacts should be configured as a comma separated list of artifact ids, with the group, artifact-id and optional classifier separated by a colon.

WARNING: This config property can only be set in application.properties

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_CLASS_LOADING_RELOADABLE_ARTIFACTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_CLASS_LOADING_RELOADABLE_ARTIFACTS+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-class-loading-configuration-class-loading-config_quarkus-class-loading-removed-artifacts]]`link:#quarkus-class-loading-configuration-class-loading-config_quarkus-class-loading-removed-artifacts[quarkus.class-loading.removed-artifacts]`


[.description]
--
Artifacts that will never be loaded by the class loader, and will not be packed into the final application. This allows you to explicitly remove artifacts from your application even though they may be present on the class path.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_CLASS_LOADING_REMOVED_ARTIFACTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_CLASS_LOADING_REMOVED_ARTIFACTS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-class-loading-configuration-class-loading-config_quarkus-class-loading-removed-resources-removed-resources]]`link:#quarkus-class-loading-configuration-class-loading-config_quarkus-class-loading-removed-resources-removed-resources[quarkus.class-loading.removed-resources]`


[.description]
--
Resources that should be removed/hidden from dependencies.

This allows for classes and other resources to be removed from dependencies, so they are not accessible to the application. This is a map of artifact id (in the form group:artifact) to a list of resources to be removed.

When running in dev and test mode these resources are hidden from the ClassLoader, when running in production mode these files are removed from the jars that contain them.

Note that if you want to remove a class you need to specify the class file name. e.g. to remove `com.acme.Foo` you would specify `com/acme/Foo.class`.

Note that for technical reasons this is not supported when running with JBang.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_CLASS_LOADING_REMOVED_RESOURCES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_CLASS_LOADING_REMOVED_RESOURCES+++`
endif::add-copy-button-to-env-var[]
--|`Map<String,Set<String>>` 
|

|===